--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -46,16 +46,16 @@
         <div class="modal-content-reg">
             <img alt="" src="/img/WR-icon.png">
             <form action="//localhost:8080/api/v1/registration" id="sampleForm" method="POST">
-                <input id="firstName" name="firstName" placeholder="First Name" type="text">
-                <input id="lastName" name="lastName" placeholder="Last Name" type="text">
-                <input id="email" name="email" placeholder="Email" type="text">
-                <input id="passwordInput" name="password" placeholder="Password" type="password">
+                <input id="firstName" minlength="8" name="firstName" placeholder="First Name" required type="text">
+                <input id="lastName" minlength="8" name="lastName" placeholder="Last Name" required type="text">
+                <input id="email" minlength="8" name="email" placeholder="Email" required type="email">
+                <input id="passwordInput" minlength="8" name="password" placeholder="Password" required type="password">
                 <div class="checkbox">
                     <input class="checkboxcontent" id="show-passbox" style=" margin-bottom: 2px;" type="checkbox">
                     <p class="show-password">Show Password</p>
 
                 </div>
-                <div class="checkbox">
+                <div class="checkbox" id="businessBoxId">
                     <input class="checkboxcontent" id="show-businessbox" style=" margin-bottom: 2px;" type="checkbox">
                     <p class="show-password">I'm a Business Owner</p>
 
