--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -116,13 +116,20 @@
 
     width: 100%;
     height: 100%;
-    position: absolute;
     top:0;
     display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
-    
+}
+
+#edit .editcontainer{
+
+    width: 100%;
+    height: 100%;
+    top:0;
+    display: none;
+    justify-content: center;
+    align-items: center;
 }
 
 #regbox .modal-content-reg{
