--- a/src/main/resources/templates/business.html
+++ b/src/main/resources/templates/business.html
@@ -30,7 +30,7 @@
 <section id="header">
     <div class="container">
 
-        <a class="icon" href="Webreserve.com"><img alt="" src="/img/WR-icon.png"></a>
+        <a class="icon" th:href="@{/home}"><img alt="" src="/img/WR-icon.png"></a>
 
         <div class="content">
             <a th:href="@{/login}">
@@ -87,7 +87,6 @@
 
 
 </section>
-
 
 <script th:src="@{/js/reservation.js}"></script>
 <script th:src="@{/js/reservationsave.js}"></script>
