--- a/src/main/resources/templates/mybusiness.html
+++ b/src/main/resources/templates/mybusiness.html
@@ -19,14 +19,13 @@
     <script crossorigin="anonymous"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
 
 
 </head>
 <body>
-
 <section id="header">
     <div class="container">
 
@@ -42,47 +41,78 @@
         </div>
 
     </div>
-
+</section>
+<section id="mytable">
+    <table class="table table-bordered">
+        <thead>
+        <tr>
+            <th>NAME</th>
+            <th>PNUMBER</th>
+            <th>ADDRESS</th>
+            <th>StartTime</th>
+            <th>EndTime</th>
+            <th>TimeInt.</th>
+        </tr>
+        </thead>
+        <tbody>
+        <th:block th:each="business : ${myBusiness}">
+            <tr>
+                <td>[[${business.name}]]</td>
+                <td>[[${business.pnumber}]]</td>
+                <td>[[${business.address}]]</td>
+                <td>[[${business.startTime}]]</td>
+                <td>[[${business.endTime}]]</td>
+                <td>[[${business.timeInterval}]]</td>
+            </tr>
+        </th:block>
+        </tbody>
+    </table>
 </section>
 
-<section id="businesses">
-    <div>
-        <form id="businessSearch" method="GET" th:action="@{/businesses}">
-            <input class="searchbutton" id="businessSearchInput" name="keyword" placeholder="Keresés.." type="text">
-            <button type="submit">GO</button>
-        </form>
-        <table class="table table-bordered" id="businessTable">
-            <thead>
-            <tr>
-                <th>NAME</th>
-                <th>ADDRESS</th>
-                <th>PHONE NUMBER</th>
-                <th>TAGS</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <th:block th:each="business : ${listBusinesses}">
-                <tr>
-                    <td>[[${business.name}]]</td>
-                    <td>[[${business.address}]]</td>
-                    <td>[[${business.pnumber}]]</td>
-                    <td><span th:each="tag :${business.tags}"> [[${tag.value}]]</span></td>
-                    <td><a th:href="@{'/businesses/' + ${business.id}}"><i
-                            class="fas fa-share"></i></a>
-                    </td>
-                </tr>
-            </th:block>
 
-            </tbody>
-        </table>
+<section id="myreservations">
+    <table class="table table-bordered">
+        <thead>
+        <tr>
+            <th>DATE</th>
+            <th>START</th>
+            <th>END</th>
+            <th>CLIENT</th>
+
+        </tr>
+        </thead>
+        <tbody>
+        <th:block th:each="reservation : ${myBusinessReservations}">
+            <tr>
+                <td>[[${reservation.date}]]</td>
+                <td>[[${reservation.startTime}]]</td>
+                <td>[[${reservation.endTime}]]</td>
+                <td><span th:each="user :${reservation.user}"> [[${user.firstName + "    " + user.lastName}]]</span>
+                </td>
+            </tr>
+        </th:block>
+        </tbody>
+    </table>
+</section>
+
+<section id="edit">
+    <div class="editcontainer" id="editbox">
+        <div class="modal-content-reg">
+            <img alt="" src="/img/WR-icon.png">
+            <form id="sampleForm" method="POST" th:object="${myBusiness}">
+                <input id="firstName" name="firstName" th:field="*{name}" type="text">
+                <input id="lastName" name="lastName" th:field="*{pnumber}" type="text">
+                <input id="email" name="email" th:field="*{address}" type="text">
+                <input id="passwordInput" name="password" th:field="*{startTime}" type="text">
+                <button id="btnSubmit" type="submit">SAVE</button>
+            </form>
+        </div>
     </div>
 
-
 </section>
 
-
-<script th:src="@{/js/businessSearch.js}"></script>
+<script th:src="@{/js/edit.js}"></script>
+<script th:src="@{/js/registration.js}"></script>
 <script crossorigin="anonymous"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
