--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -27,7 +27,7 @@
 <section id="header">
     <div class="container">
 
-        <a class="icon" href="Webreserve.com"><img alt="" src="/img/WR-icon.png"></a>
+        <a class="icon" th:href="@{/home}"><img alt="" src="/img/WR-icon.png"></a>
 
         <div class="content">
             <a th:href="@{/login}">
