--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,12 +54,19 @@
 <section id="mainpage">
     <div class="maincontainer">
         <p class="maintext">KERESD MEG A NEKED <br> MEGFELELŐ SZOLGÁLTATÁST</p>
-        <a class="regbutton" id="registrationButton"
-           sec:authorize="!hasAuthority('BUSINESSOWNER') and !hasAuthority('USER')" th:href="@{/registration}">REGISZTRACIO</a>
-        <a class="logbutton" id="loginButton" sec:authorize="!hasAuthority('BUSINESSOWNER') and !hasAuthority('USER')"
-           th:href="@{/login}">BELEPES</a>
-        <a class="regbutton" id="businessButton" th:href="@{/businesses}">BUSINESSES</a>
-        <a class="regbutton" id="myProfileButton" th:href="@{/users}">USERS</a>
+        <div class="content">
+            <div class="content-box"  sec:authorize="!hasAuthority('BUSINESSOWNER') and !hasAuthority('USER')">
+                <a class="regbutton" id="registrationButton"
+                   sec:authorize="!hasAuthority('BUSINESSOWNER') and !hasAuthority('USER')" th:href="@{/registration}">REGISZTRACIO</a>
+                <a class="regbutton" id="loginButton" sec:authorize="!hasAuthority('BUSINESSOWNER') and !hasAuthority('USER')"
+                   th:href="@{/login}">BELEPES</a>
+            </div>
+            <div class="content-box">
+                <a class="regbutton" id="businessButton" th:href="@{/businesses}">BUSINESSES</a>
+                <a class="regbutton" id="myProfileButton" th:href="@{/users}">USERS</a>
+            </div>
+        </div>
+
     </div>
 
 
