Change profile picture

--- a/src/main/resources/templates/business.html
+++ b/src/main/resources/templates/business.html
@@ -50,6 +50,7 @@
         <table class="table table-bordered" id="businessTable">
             <thead>
             <tr>
+                <th>Logo</th>
                 <th>NAME</th>
                 <th>ADDRESS</th>
                 <th>PHONE NUMBER</th>
@@ -60,9 +61,10 @@
             <tbody>
             <th:block th:each="business : ${businessById}">
                 <tr>
+                    <td><img style="height:100px;" th:src="*{'data:image/jpeg;base64,'+ {business.image}}"></td>
                     <td>[[${business.name}]]</td>
                     <td>[[${business.address}]]</td>
-                    <td>[[${business.pnumber}]]</td>
+                    <td>[[${business.pNumber}]]</td>
                     <td><span th:each="tag :${business.tags}"> [[${tag.value}]]</span></td>
                 </tr>
             </th:block>
