--- a/src/main/resources/templates/businesses.html
+++ b/src/main/resources/templates/businesses.html
@@ -66,7 +66,7 @@
                 <tr>
                     <td>[[${business.name}]]</td>
                     <td>[[${business.address}]]</td>
-                    <td>[[${business.pnumber}]]</td>
+                    <td>[[${business.pNumber}]]</td>
                     <td><span th:each="tag :${business.tags}"> [[${tag.value}]]</span></td>
                     <td><a th:href="@{'/businesses/' + ${business.id}}"><i
                             class="fas fa-share"></i></a>
