--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/html" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -19,11 +19,18 @@
     <script crossorigin="anonymous"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <script src="/webjars/jquery/jquery.min.js"></script>
+    <script src="/webjars/sockjs-client/sockjs.min.js"></script>
+    <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/rating.css}">
+
+
 </head>
 <body>
+
 <section id="header">
     <div class="container">
 
@@ -39,43 +46,45 @@
         </div>
 
     </div>
+
 </section>
 
-<section id="users">
+<section id="business">
     <div>
-        <form method="get" th:action="@{/users}">
-            <input class="searchbutton" name="keyword" placeholder="Keresés.." type="text">
-            <button type="submit">GO</button>
-        </form>
-        <table class="table table-bordered">
+        <table class="table table-bordered" id="businessTable">
             <thead>
             <tr>
-                <th>FIRST NAME</th>
-                <th>LAST NAME</th>
-                <th>EMAIL</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
                 <th></th>
             </tr>
             </thead>
             <tbody>
-            <th:block th:each="user : ${listUsers}">
+            <th:block th:each="user : ${users}">
                 <tr>
                     <td>[[${user.firstName}]]</td>
                     <td>[[${user.lastName}]]</td>
                     <td>[[${user.email}]]</td>
-                    <td><a th:href="@{'/user/' + ${user.id}}"><i
-                            class="fas fa-share"></i></a>
-                    </td>
                 </tr>
             </th:block>
             </tbody>
         </table>
     </div>
-
+    <p>CHAT:</p>
+    <div id="chatBox" style="display: grid; width: 20rem;">
+        <p th:class="${message.fromId}" th:each="message : ${messages}">[[${message.messageContent}]]</p>
+    </div>
+    <input id="chatMessage" size="40" type="text">
+    <br/>
+    <button id="send" onclick="send()" type="button">Send</button>
 
 </section>
 
-
-<script th:src="@{/js/registration.js}"></script>
+<script th:src="@{/js/chat.js}"></script>
+<script th:src="@{/js/reservation.js}"></script>
+<script th:src="@{/js/reservationsave.js}"></script>
+<script th:src="@{/js/rating.js}"></script>
 <script crossorigin="anonymous"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
