--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -3,3 +3,42 @@
     text-align: center;
     margin-top: 10%;
 }
+
+input{
+    padding:0.5rem;
+    border-radius: 5px;
+    border: 3px solid #ccc;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+}
+
+input:focus {
+  border: 3px solid #124559;
+}
+
+.regButton{
+    width: 100%;
+    height: 2.5rem;
+    background-color: #598392;
+    border-radius: 5px;
+    border: 1px solid;
+    color: white;
+}
+
+form{
+    width: fit-content;
+    margin: auto;
+}
+
+.regRef{
+    color:white;
+    text-decoration:none;
+}
+
+.alert{
+    background-color: red;
+    border-radius: 5px;
+    border: 2px solid;
+    color: white;
+}
