--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -20,6 +20,7 @@
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/registration.css}">
 
 
 </head>
@@ -43,42 +44,69 @@
 <section id="regbox">
 
     <div class="bg-modal-reg">
-        <div class="modal-content-reg">
-            <img alt="" src="/img/WR-icon.png">
+        <div class="container modal-content-reg">
+            <!--            <img alt="" src="/img/WR-icon.png">-->
+            <h1>REGISTRATION</h1>
             <form action="//localhost:8080/api/v1/registration" id="sampleForm" method="POST">
-                <input id="firstName" minlength="4" name="firstName" placeholder="First Name" required type="text">
-                <input id="lastName" minlength="4" name="lastName" placeholder="Last Name" required type="text">
-                <input id="email" minlength="4" name="email" placeholder="Email" required type="email">
-                <input id="passwordInput" minlength="4" name="password" placeholder="Password" required type="password">
+                <div class="row">
+                    <input class="col" id="firstName" minlength="4" name="firstName" placeholder="First Name" required
+                           type="text">
+                    <input class="col" id="lastName" minlength="4" name="lastName" placeholder="Last Name" required
+                           type="text">
+                </div>
+                <div class="row">
+                    <input class="col" id="email" minlength="4" name="email" placeholder="Email" required type="email">
+                    <input class="col" id="passwordInput" minlength="4" name="password" placeholder="Password" required
+                           type="password">
+                </div>
                 <div class="checkbox">
-                    <input class="checkboxcontent" id="show-passbox" style=" margin-bottom: 2px;" type="checkbox">
-                    <p class="show-password">Show Password</p>
+                    <div class="checkbox col" id="businessBoxId">
+                        <input class="checkboxcontent" id="show-businessbox" style=" margin-bottom: 2px;"
+                               type="checkbox">
+                        <p class="show-password">I'm a Business Owner</p>
 
+                    </div>
+                    <div class="checkbox col">
+                        <input class="checkboxcontent" id="show-passbox" style=" margin-bottom: 2px;"
+                               type="checkbox">
+                        <p class="show-password">Show Password</p>
+                    </div>
                 </div>
-                <div class="checkbox" id="businessBoxId">
-                    <input class="checkboxcontent" id="show-businessbox" style=" margin-bottom: 2px;" type="checkbox">
-                    <p class="show-password">I'm a Business Owner</p>
 
-                </div>
                 <div class="businessinput" id="bInput">
-                    <input id="businessname" name="name" placeholder="Business Name" type="text">
-                    <input id="address" name="address" placeholder="Address" type="text">
-                    <input id="tag" name="tag" placeholder="Tag" type="text">
-                    <input id="pnumber" name="pnumber" placeholder="Phone Number" type="text">
-                    <p>Start Time</p>
-                    <input class="timebox" id="stime" name="stime" placeholder="Start Time" type="time">
-                    <p>End Time</p>
-                    <input class="timebox" id="etime" name="etime" placeholder="End Time" type="time">
-                    <p>Time Interval</p>
-                    <select id="timeint" name="timeinterval">
-                        <option value="15">15 MIN</option>
-                        <option value="30"> 30 MIN</option>
-                        <option value="60">1HOUR</option>
-                        <option value="120">2HOUR</option>
-                    </select>
+                    <div class="row">
+                        <input class="col" id="businessname" name="name" placeholder="Business Name" type="text">
+                        <input class="col" id="address" name="address" placeholder="Address" type="text">
+                    </div>
+                    <div class="row">
+                        <input class="col" id="tag" name="tag" placeholder="Tag" type="text">
+                        <input class="col" id="pnumber" name="pnumber" placeholder="Phone Number" type="text">
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <p>Start Time</p>
+                            <input class="timebox" id="stime" name="stime" placeholder="Start Time"
+                                   type="time">
+                        </div>
+                        <div class="col">
+                            <p>Time Interval</p>
+                            <select class="regSelect" id="timeint" name="timeinterval">
+                                <option value="15">15 MIN</option>
+                                <option value="30"> 30 MIN</option>
+                                <option value="60">1HOUR</option>
+                                <option value="120">2HOUR</option>
+                            </select>
+                        </div>
+                        <div class="col">
+                            <p>End Time</p>
+                            <input class="timebox" id="etime" name="etime" placeholder="End Time"
+                                   type="time">
+                        </div>
+
+                    </div>
 
                 </div>
-                <button id="btnSubmit" type="submit">SUBMIT</button>
+                <button class="registrationSubmit" id="btnSubmit" type="submit">SUBMIT</button>
 
             </form>
         </div>
